Addressing some stability issue with a better version

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.renjin</groupId>
             <artifactId>renjin-script-engine</artifactId>
-            <version>0.7.0-RC7</version>
+            <version>0.8.1582</version>
         </dependency>
 
     </dependencies>
