--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -5,3 +5,8 @@ dbpassword=atav
 bioinfo-team=zr2180
 max-atav-job=10
 priority-user=zr2180
+python=/software/python2.7.7/bin/python
+plink=/software/PLINK_1.90/3.38/plink
+king=/software/king_relatedness/king
+R-3.2.5=/software/R-3.2.5/bin/Rscript
+R-3.0.1=/software/R-3.0.1/bin/Rscript
