--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -6,6 +6,7 @@ bioinfo-team=zr2180
 max-atav-job=10
 priority-user=zr2180
 python=/software/python2.7.7/bin/python
+perl=perl
 plink=/software/PLINK_1.90/3.38/plink
 king=/software/king_relatedness/king
 R-3.2.5=/software/R-3.2.5/bin/Rscript
