send email with error tracking when unexpected job fail - issue 4234

--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -3,11 +3,16 @@ annodb=WalDB
 dbuser=atav
 dbpassword=atav
 bioinfo-team=zr2180
-max-atav-job=10
+max-atav-job=15
 priority-user=zr2180
-python=/software/python2.7.7/bin/python
+python=/nfs/goldstein/software/python2.7.7/bin/python
 perl=perl
-plink=/software/PLINK_1.90/3.38/plink
-king=/software/king_relatedness/king
-R-3.2.5=/software/R-3.2.5/bin/Rscript
-R-3.0.1=/software/R-3.0.1/bin/Rscript
+plink=/nfs/goldstein/software/PLINK/PLINK_1.90_3.38/plink 
+king=/nfs/goldstein/software/king_relatedness/king
+flashpca=/usr/local/igm/atav-tools/flashpca/flashpca
+R-3.2.5=Rscript
+R-3.0.1=Rscript
+rscript=Rscript
+mail-server=10.73.50.207
+email-from=igm-bioinfo@columbia.edu
+email-to=z.ren@columbia.edu
