--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -5,14 +5,19 @@ dbpassword=atav
 bioinfo-team=zr2180
 max-atav-job=15
 priority-user=zr2180
-python=/nfs/goldstein/software/python2.7.7/bin/python
-perl=perl
-plink=/nfs/goldstein/software/PLINK/PLINK_1.90_3.38/plink 
-king=/nfs/goldstein/software/king_relatedness/king
+# tool path config info 
+bgzip=/nfs/goldstein/software/bin/bgzip
 flashpca=/usr/local/igm/atav-tools/flashpca/flashpca
+king=/nfs/goldstein/software/king_relatedness/king
+plink=/nfs/goldstein/software/PLINK/PLINK_1.90_3.38/plink 
+tabix=/nfs/goldstein/software/bin/tabix
+
+perl=perl
+python=/nfs/goldstein/software/python2.7.7/bin/python
 R-3.2.5=Rscript
 R-3.0.1=Rscript
 rscript=Rscript
+# mail server config info
 mail-server=10.73.50.207
-email-from=igm-bioinfo@columbia.edu
+email-from=z.ren@columbia.edu
 email-to=z.ren@columbia.edu
