update config to include dbport

--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -1,10 +1,15 @@
-servers=waldb;127.0.0.1
-annodb=WalDB
-dbuser=atav
-dbpassword=atav
-bioinfo-team=zr2180
+# db config info
+servers=atavdb;127.0.0.1
+dbport=3333
+annodb=atavdb
+dbuser=root
+dbpassword=root
+
+# job config info
+bioinfo-team=atav
 max-atav-job=15
-priority-user=zr2180
+priority-user=atav
+
 # tool path config info 
 bgzip=/nfs/goldstein/software/bin/bgzip
 flashpca=/usr/local/igm/atav-tools/flashpca/flashpca
@@ -17,6 +22,7 @@ python=/nfs/goldstein/software/python2.7.7/bin/python
 R-3.2.5=Rscript
 R-3.0.1=Rscript
 rscript=Rscript
+
 # mail server config info
 mail-server=10.73.50.207
 email-from=z.ren@columbia.edu
