minor public config template changes

--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -2,8 +2,8 @@
 servers=atavdb;127.0.0.1
 dbport=3333
 annodb=atavdb
-dbuser=root
-dbpassword=root
+dbuser=atav
+dbpassword=atav
 
 # job config info
 bioinfo-team=atav
