update python config path

--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -17,7 +17,7 @@ king=/nfs/goldstein/software/king_relatedness/king
 plink=/nfs/goldstein/software/PLINK/PLINK_1.90_3.38/plink 
 tabix=/nfs/goldstein/software/bin/tabix
 
-python=/nfs/goldstein/software/python2.7.7/bin/python
+python=python
 R-3.2.5=Rscript
 R-3.0.1=Rscript
 rscript=Rscript
