--- a/config/atav.dragen.system.config.properties
+++ b/config/atav.dragen.system.config.properties
@@ -11,11 +11,11 @@ max-atav-job=15
 priority-user=nick
 
 # tool path config info 
-bgzip=/nfs/goldstein/software/bin/bgzip
-flashpca=/usr/local/igm/atav-tools/flashpca/flashpca
-king=/nfs/goldstein/software/king_relatedness/king
-plink=/nfs/goldstein/software/PLINK/PLINK_1.90_3.38/plink 
-tabix=/nfs/goldstein/software/bin/tabix
+bgzip=bgzip
+flashpca=flashpca
+king=king
+plink=plink 
+tabix=tabix
 
 python=python
 R-3.2.5=Rscript
